kubernetes/network-policy/allow-ingress-to-payment-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-ingress-to-payment-api
  namespace: card-processing

spec:
  podSelector:
    matchLabels:
      app: payment-api

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx

    ports:
    - protocol: TCP
      port: 8080
