kubernetes/network-policy/allow-payment-to-audit.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-payment-to-audit
  namespace: card-processing

spec:

  podSelector:
    matchLabels:
      app: audit-service

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: payment-api

    ports:
    - protocol: TCP
      port: 8082
